tests/type-states.stderr
error: 
   ┌─ test:17:5
   │
 6 │ my-drone :: Drone Idle
   │ -------- ...but the actual type was annotated here
   ·
12 │ land :: Drone Hovering -> Drone Idle
   │         -------------- expected because the input to the function has type `Drone Hovering`...
   ·
17 │ _ : my-drone . land -- cannot land because drone is already idle
   │     ^^^^^^^^ expected `Drone Hovering`, but found `Drone Idle`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

